--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/>
         <meta name="theme-color" content="#000000"/>
-        <script defer="defer" src="https://use.fontawesome.com/releases/v5.3.1/js/all.js">
-
-        </script>
+        <script defer="defer" src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css"/>
         <link rel="manifest" href="/manifest.json"/>
         <link rel="shortcut icon" href="/favicon.ico"/>
-        <title>React App</title>
+        <title>1149817</title>
         <link href="/static/css/main.a9089c74.chunk.css" rel="stylesheet">
     </head>
     <body>
-        <h1>1149817</h1>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div class="container" id="root">
 
